added connectiong string and dropped staged changes

--- a/CMPT291-Project/App.config
+++ b/CMPT291-Project/App.config
@@ -3,10 +3,12 @@
 	<connectionStrings>
 
 	  <!--Charlene's connection-->
-    <add name ="connectionString" connectionString = "Server = JEMISON\SQLEXPRESS; Database = 291Project; Trusted_Connection = yes;"/>
+		<!--add name ="connectionString" connectionString = "Server = JEMISON\SQLEXPRESS; Database = 291Project; Trusted_Connection = yes;"-->
     
 		<!-- Haris' Connection-->
     <!--add name ="connectionString" connectionString = "Server = DESKTOP-KCPC9PN; Database = LabProjectTest; Trusted_Connection = yes;" -->
-    
+
+		<!-- Travis' Connection-->
+	<add name ="connectionString" connectionString = "Server = DESKTOP-L3H29R4; Database = 291Project; Trusted_Connection = yes;"/>
 		</connectionStrings>
 </configuration>
