MainFrm hasnt been changed, i just put a space somewhere so it would fix my server. IMPORTANT: I put in all of the changes that didnt change functionality from the last commits but a lot of the recent changes cannot be integrated directly into this because I do not know how they work.

--- a/CMPT291-Project/App.config
+++ b/CMPT291-Project/App.config
@@ -2,11 +2,13 @@
 <configuration>
 	<connectionStrings>
 
-	  <!--Charlene's connection-->
-    <add name ="connectionString" connectionString = "Server = JEMISON\SQLEXPRESS; Database = 291Project; Trusted_Connection = yes;"/>
-    
+		<!--Nick's connection-->
+		<add name ="connectionString" connectionString = "Server = DESKTOP-9ORMB3K; Database = 291Project; Trusted_Connection = yes;"/>
+		<!--Charlene's connection-->
+		<!--add name ="connectionString" connectionString = "Server = JEMISON\SQLEXPRESS; Database = 291Project; Trusted_Connection = yes;"/-->
+
 		<!-- Haris' Connection-->
-    <!--add name ="connectionString" connectionString = "Server = DESKTOP-KCPC9PN; Database = LabProjectTest; Trusted_Connection = yes;" -->
+		<!--add name ="connectionString" connectionString = "Server = DESKTOP-KCPC9PN; Database = LabProjectTest; Trusted_Connection = yes;" -->
     
 		</connectionStrings>
 </configuration>
