--- a/CMPT291-Project/App.config
+++ b/CMPT291-Project/App.config
@@ -6,7 +6,7 @@
     <!--add name ="connectionString" connectionString = "Server = JEMISON\SQLEXPRESS; Database = 291Project; Trusted_Connection = yes;" -->
     
 		<!-- Haris' Connection-->
-    <!--add name ="connectionString" connectionString = "Server = DESKTOP-KCPC9PN; Database = LabProjectTest; Trusted_Connection = yes;" -->
+    <!--add name ="connectionString" connectionString = "Server = DESKTOP-KCPC9PN; Database = LabProjectTest; Trusted_Connection = yes;" /-->
     
 		</connectionStrings>
 </configuration>
