Made all DataGirds read only so user cant mess with the values given

--- a/CMPT291-Project/App.config
+++ b/CMPT291-Project/App.config
@@ -3,7 +3,7 @@
 	<connectionStrings>
 
 	  <!--Charlene's connection-->
-    <!--add name ="connectionString" connectionString = "Server = JEMISON\SQLEXPRESS; Database = 291Project; Trusted_Connection = yes;" -->
+    <!--add name ="connectionString" connectionString = "Server = JEMISON\SQLEXPRESS; Database = 291Project; Trusted_Connection = yes;" /-->
     
 		<!-- Haris' Connection-->
     <!--add name ="connectionString" connectionString = "Server = DESKTOP-KCPC9PN; Database = LabProjectTest; Trusted_Connection = yes;" /-->
