--- a/CMPT291-Project/App.config
+++ b/CMPT291-Project/App.config
@@ -2,12 +2,12 @@
 <configuration>
 	<connectionStrings>
 		<!--Nick's connection-->
-		<add name ="connectionString" connectionString = "Server = DESKTOP-9ORMB3K; Database = 291Project; Trusted_Connection = yes;"/>
+    <!--add name ="connectionString" connectionString = "Server = DESKTOP-9ORMB3K; Database = 291Project; Trusted_Connection = yes;"/-->
 		<!--Charlene's connection-->
 		<!--add name ="connectionString" connectionString = "Server = JEMISON\SQLEXPRESS; Database = 291Project; Trusted_Connection = yes;"/-->
 
 		<!-- Haris' Connection-->
-		<!--add name ="connectionString" connectionString = "Server = DESKTOP-KCPC9PN; Database = LabProjectTest; Trusted_Connection = yes;" -->
+    <!--add name ="connectionString" connectionString = "Server = DESKTOP-KCPC9PN; Database = LabProjectTest; Trusted_Connection = yes;" /-->
     
 		</connectionStrings>
 </configuration>
