--- a/CMPT291-Project/App.config
+++ b/CMPT291-Project/App.config
@@ -2,7 +2,7 @@
 <configuration>
 	<connectionStrings>
 		<!--Nick's connection-->
-    <!--add name ="connectionString" connectionString = "Server = DESKTOP-9ORMB3K; Database = 291Project; Trusted_Connection = yes;"/-->
+    <add name ="connectionString" connectionString = "Server = DESKTOP-9ORMB3K; Database = 291Project; Trusted_Connection = yes;"/>
 		<!--Charlene's connection-->
 		<!--add name ="connectionString" connectionString = "Server = JEMISON\SQLEXPRESS; Database = 291Project; Trusted_Connection = yes;"/-->
 
