Test version of transaction search, currently missing date reference capability, should use implementation in custentry as a template. Does not contain checks for invalid values. Should not interfere with normal operation.

--- a/CMPT291-Project/App.config
+++ b/CMPT291-Project/App.config
@@ -2,9 +2,9 @@
 <configuration>
 	<connectionStrings>
 		<!--Nick's connection-->
-    <!--add name ="connectionString" connectionString = "Server = DESKTOP-9ORMB3K; Database = 291Project; Trusted_Connection = yes;"/-->
+    <add name ="connectionString" connectionString = "Server = DESKTOP-9ORMB3K; Database = 291Project; Trusted_Connection = yes;"/>
 		<!--Charlene's connection-->
-		<add name ="connectionString" connectionString = "Server = JEMISON\SQLEXPRESS; Database = 291Project; Trusted_Connection = yes;"/>
+		<!--add name ="connectionString" connectionString = "Server = JEMISON\SQLEXPRESS; Database = 291Project; Trusted_Connection = yes;"/-->
 
 	  <!--Charlene's connection-->
 		<!--add name ="connectionString" connectionString = "Server = JEMISON\SQLEXPRESS; Database = 291Project; Trusted_Connection = yes;"-->
